--- a/styles.css
+++ b/styles.css
@@ -1,130 +1,139 @@
 
-.navigation {
+.navigation{
+  position: absolute;
   display: flex;
-  flex-direction: row;
-  position: absolute;
-  width: 1440px;
-  height: 72px;
-  left: 0;
-  top: 0;
-  background: #3e3c3c;
-}
-
-.hamIcon {
-  color: #acb7c3;
-  position: absolute;
-  left: 90.67%;
-  right: 16.67%;
-  top: 3%;
-  cursor: pointer;
-
-  :hover {
-    color: #fff;
-  }
+  justify-content: space-between;
+  align-items: center;
+  width: 820px; 
+  height: 92px;
+  left: 0px;
+  top: 0px;
+  background: #3C3A39;
 }
 
 .myLogo {
-  position: absolute;
-  height: 20px;
-  font-family: 'Inter', sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  align-items: flex-start;
-  text-align: center;
-  color: #fff;
-  top: 10%;
-}
-
-.headline {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: absolute;
-  width: 566px;
-  height: 739px;
-  left: 143px;
-  top: 72px;
-}
-
-.main {
-  position: absolute;
-  width: 1440px;
-  height: 870px;
-  left: 0;
-  top: 8%;
-  background: #1c1a19;
-}
-
-.heading-1 {
-  width: 566px;
-  height: 160px;
-  font-family: 'Crete Round', sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 72px;
-  line-height: 82px;
-  left: 15%;
-  color: #f55800;
-}
-
-.heading-2 {
-  width: 566px;
-  height: 24px;
-  font-family: 'Inter', sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 32px;
-  line-height: 44px;
-  display: flex;
-  align-items: center;
-  color: #fff;
-  flex: none;
   order: 1;
-  flex-grow: 0;
+  color: white;
 }
 
-.content {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-}
-
-.content-1 {
-  width: 566px;
-  height: 123px;
-  font-family: 'Inter', serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 32px;
-  color: #f4f5f7;
-  flex: none;
+.hamIcon {
   order: 2;
-  flex-grow: 0;
+  color: white;
+
 }
 
-.vector-in {
-  background-image: url(Group.png);
-  position: absolute;
-  width: 375.13px;
-  height: 769.27px;
-  top: 1%;
-  left: 805px;
+.heading{
+  display: flex;
+flex-direction: column;
+align-items: flex-start;
+padding: 120px 24px;
+gap: 12px;
+position: absolute;
+width: 775px;
+height: 590px;
+left: 0px;
+top: 90px;
+background: #1C1A19;
+}
+
+.heading-1{
+  width: 327px;
+height: 124px;
+font-family: 'Crete Round';
+font-style: normal;
+font-weight: 400;
+font-size: 56px;
+line-height: 64px;
+letter-spacing: 0.37px;
+color: #FF6B00;
+flex: none;
+}
+
+.heading-2{
+width: 327px;
+height: 27px;
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 24px;
+line-height: 32px;
+display: flex;
+align-items: center;
+color: #FFF5E1;
+flex: none;
+order: 1;
+}
+
+.content{
+width: 327px;
+height: 123px;
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 24px;
+color: #FFFFFF;
+flex: none;
+order: 2;
 }
 
 .icons-container {
-  position: absolute;
-  width: 20px;
-  height: 98.96px;
-  left: 2.5%;
-  right: 96.25%;
-  top: 244px;
-  bottom: 91.87%;
-  color: #fff;
-  cursor: pointer;
+  display: flex;
+flex-direction: row;
+align-items: center;
+padding: 0px;
+width: 200px;
+height: 40px;
+flex: none;
+order: 3;
+flex-grow: 0;
+color: #FFFFFF;
+}
 
-  :hover {
-    color: #f55800;
+.i-github{
+  cursor: pointer;
+  :hover{
+   color: #FF6B00;
   }
+}
+
+.i-linkedin{
+  cursor: pointer;
+  :hover{
+   color: #FF6B00;
+  }
+}
+
+.i-twitter{
+  cursor: pointer;
+  :hover{
+   color: #FF6B00;
+  }
+}
+
+.i-instagram{
+  cursor: pointer;
+  :hover{
+   color: #FF6B00;
+  }
+}
+
+.i-facebook{
+  cursor: pointer;
+  :hover{
+   color: #FF6B00;
+  }
+}
+
+.vector-in{
+  background-image: url(./Group.svg);
+  position: absolute;
+  left: 39.57%;
+  right: 30.52%;
+  top: 7.59%;
+  bottom: 0;
+  width: 500px;
+  /* Theme 3 / Primary 1 */
+  background-repeat: no-repeat;
+
 }
