--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,16 @@
+* {
+  margin:0;
+  padding: 0;
+}
+
 
 .navigation {
   position: absolute;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 820px;
+  /* padding-inline: 12px;  */
+  width: 100%;
   height: 92px;
   left: 0;
   top: 0;
@@ -14,6 +20,7 @@
 .myLogo {
   order: 1;
   color: white;
+  text-decoration: none;
 }
 
 .hamIcon {
@@ -21,18 +28,24 @@
   color: white;
 }
 
+
 .heading {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 120px 24px;
+  padding: 120px 30px;
   gap: 12px;
   position: absolute;
-  width: 775px;
+  width: 100%;
   height: 590px;
   left: 0;
   top: 90px;
   background: #1c1a19;
+  background-image: url('./Group.svg');
+  background-repeat: no-repeat;
+  background-size:50%;
+  background-position-x:90%;
+  background-position-y:90%;
 }
 
 .heading-1 {
@@ -78,14 +91,15 @@
 
 .icons-container {
   display: flex;
-  flex-direction: row;
   align-items: center;
+  justify-content: space-around;
   padding: 0;
   width: 200px;
   height: 40px;
   flex: none;
   order: 3;
   flex-grow: 0;
+  list-style: none;
   color: #fff;
 }
 
