--- a/styles.css
+++ b/styles.css
@@ -32,19 +32,18 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 120px 30px;
+  padding: 120px 0 120px 0;
   gap: 12px;
   position: absolute;
   width: 100%;
   height: 590px;
-  left: 0;
   top: 90px;
   background: #1c1a19;
-  background-image: url('./Group.svg');
+  background-image: url('./Group.png');
   background-repeat: no-repeat;
   background-size: 50%;
-  background-position-x: 90%;
-  background-position-y: 90%;
+  background-position-x: 100%;
+  background-position-y: 95%;
 }
 
 .heading-1 {
