--- a/styles.css
+++ b/styles.css
@@ -391,3 +391,24 @@ color: #FFFFFF;
   color: rgba(255, 255, 255, 0.8);
  line-height: 32px;
 }  
+
+/* get in touch section */
+
+.footer{
+  background-color: #e5e5e5;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 8px;
+}
+
+.f-text{
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 44px;
+  text-align: center;
+  color: #172b4d;
+}
+
