--- a/styles.css
+++ b/styles.css
@@ -151,16 +151,13 @@
   background-repeat: no-repeat;
 }
 
-
-/* rest of section */
-
 .recent-works-container {
- margin-top: 900px;
- position: absolute;
- margin-left: 15px;
+  margin-top: 900px;
+  position: absolute;
+  margin-left: 15px;
 }
 
-.rw-heading{
+.rw-heading {
   font-family: 'Crete Round', sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -170,11 +167,11 @@
   border-bottom: 1px solid #212121;
 }
 
-.rw-image1{
+.rw-image1 {
   margin: 50px 0 20px 10px;
 }
 
-.rw-multi-st-text{
+.rw-multi-st-text {
   width: 327px;
   height: 147px;
   font-family: 'Inter', serif;
@@ -182,37 +179,35 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  color: #091E42;
-
+  color: #091e42;
 }
 
-.rw-button{
+.rw-button {
   background-color: #fff;
   padding: 8px;
-  border: 1px solid #8993A4
+  border: 1px solid #8993a4;
 }
 
-.rw-button1{
+.rw-button1 {
   margin-top: 10px;
-  background-color: #FF6B00;
+  background-color: #ff6b00;
   padding-inline: 10px;
   padding: 8px;
-  color:#fff;
-  border: 1px solid #8993A4;
+  color: #fff;
+  border: 1px solid #8993a4;
 }
 
-.rw-p-art-data{
+.rw-p-art-data {
   margin-top: 30px;
   padding-inline-start: 30px;
   padding-inline-end: 25px;
-  padding-top: 50px; 
-  background-image:url('./ImgPlaceholder.svg');
-  width:280px;
+  padding-top: 50px;
+  background-image: url('./ImgPlaceholder.svg');
+  width: 280px;
   height: 280px;
 }
 
-
-.rw-p-art-data > h3{
+.rw-p-art-data > h3 {
   width: 295px;
   height: 81px;
   font-family: 'Crete Round', sans-serif;
@@ -220,167 +215,157 @@
   font-weight: 400;
   font-size: 32px;
   line-height: 44px;
-  color: #FFFFFF;
-  
+  color: #fff;
 }
 
-.rw-p-art-data p{
+.rw-p-art-data p {
   width: 301px;
-height: 99px;
-font-family: 'Inter', sans-serif;
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 24px;
-color: #FFFFFF;
+  height: 99px;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #fff;
 }
-
 
 .rw-button-pr {
   padding: 10px;
   background: rgba(255, 255, 255, 0.24);
   margin-right: 10px;
-  border:none;
+  border: none;
   outline: none;
 }
 
 .rw-button-pr1 {
   padding: 10px;
-  background: #FF6B00;
+  background: #ff6b00;
   color: white;
   width: 97%;
-  border:none;
+  border: none;
   outline: none;
   margin-bottom: 15px;
 }
 
-/* footer half of page */
-
-.b-page{
+.b-page {
   position: absolute;
   width: 375px;
   height: 1801px;
-  left: 0px;
+  left: 0;
   top: 4137px;
-  background: #1C1A19;
+  background: #1c1a19;
   background-repeat: no-repeat;
   background-position-x: 100%;
   background-position-y: 17%;
   background-image: url('./Group3.svg');
 }
 
-.b-p-form{
-    margin-top: 100px;
-    background: transparent;
-    margin-left: 15px;
-    border-bottom: 1px solid gray;
-    background-size: 50%;
-   
-  }
+.b-p-form {
+  margin-top: 100px;
+  background: transparent;
+  margin-left: 15px;
+  border-bottom: 1px solid gray;
+  background-size: 50%;
+}
 
-  .b-p-form > h2 {
-    width: 327px;
-    height: 79px;
-    font-family: 'Crete Round';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 72px;
-    line-height: 88px;
-    letter-spacing: 0.37px;
-    color: #FF6B00;
-  }
+h2 {
+  display: inline-block;
+  margin: 0;
+  vertical-align: middle;
+  font-family: 'InaiMathi', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 30px;
+  color: #fff;
+}
 
-  .b-p-form > p {
-    width: 327px;
+.b-p-form > h2 {
+  width: 327px;
+  height: 79px;
+  font-family: 'Crete Round', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 72px;
+  line-height: 88px;
+  letter-spacing: 0.37px;
+  color: #ff6b00;
+}
+
+.b-p-form > p {
+  width: 327px;
   height: 148px;
-  font-family: 'Inter';
+  font-family: 'Inter', serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  color: #F4F5F7;
-  }
+  color: #f4f5f7;
+}
 
-  .b-p-form > input {
-    padding: 10px;
-    color: #fff;
-    background-color: #ff6b00;
-    margin-bottom: 156px;
-    border: none;
-    outline: none;
-  }
+.b-p-form > input {
+  padding: 10px;
+  color: #fff;
+  background-color: #ff6b00;
+  margin-bottom: 156px;
+  border: none;
+  outline: none;
+}
 
-  .b-page-skills{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 80px 24px 38px;
-    gap: 24px;
-    width: 329px;
-    left: calc(50% - 329px/2);
- 
-  }
-
-  
-  .icon2 {
-    display: inline-block;
-    width: 18px;
-    height: 18px;
-    background-color: #FF6B00;
-    transform: rotate(-45deg);
-    text-align: center;
-    margin-right: 10px;
-    vertical-align: middle;
-    line-height: 30px;
-  }
-
-  .icon3{
-    display: inline-block;
-    width: 18px;
-    height: 18px;
-    background-color: #FF6B00;
-    text-align: center;
-    margin-right: 10px;
-    vertical-align: middle;
-    line-height: 30px;
-  }
-
-  .icon4{
-    display: inline-block;
-    width: 18px;
-    height: 18px;
-    background-color: #FF6B00;
-    border-radius: 50%;
-    text-align: center;
-    margin-right: 10px;
-    vertical-align: middle;
-    line-height: 30px;
-  }
-
-  
-  h2 {
-    display: inline-block;
-    font-size: 24px;
-    margin: 0;
-    vertical-align: middle;
-    font-family: 'InaiMathi', sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 32px;
-    line-height: 30px;
-    color:#FFFFFF;
-  }
-  
-  
-  .text-container{
-    display: flex;
+.b-page-skills {
+  display: flex;
   flex-direction: column;
   align-items: center;
-  padding: -8px 12px 0px 15px;
+  padding: 80px 24px 38px;
+  gap: 24px;
+  width: 329px;
+  left: calc(50% - 329px / 2);
+}
+
+.icon2 {
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  background-color: #ff6b00;
+  transform: rotate(-45deg);
+  text-align: center;
+  margin-right: 10px;
+  vertical-align: middle;
+  line-height: 30px;
+}
+
+.icon3 {
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  background-color: #ff6b00;
+  text-align: center;
+  margin-right: 10px;
+  vertical-align: middle;
+  line-height: 30px;
+}
+
+.icon4 {
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  background-color: #ff6b00;
+  border-radius: 50%;
+  text-align: center;
+  margin-right: 10px;
+  vertical-align: middle;
+  line-height: 30px;
+}
+
+.text-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: -8px 12px 0 15px;
   gap: 8px;
   height: 216px;
   order: 1;
-  }
+}
 
 .text-container > p {
   font-family: 'Inter', sans-serif;
@@ -389,17 +374,15 @@ color: #FFFFFF;
   font-size: 18px;
   text-align: center;
   color: rgba(255, 255, 255, 0.8);
- line-height: 32px;
-}  
+  line-height: 32px;
+}
 
-/* get in touch section */
-
-.footer{
-  background-color: #ffffff;
+.footer {
+  background-color: #fff;
   padding: 20px;
 }
 
-.f-text{
+.f-text {
   font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -435,7 +418,7 @@ color: #FFFFFF;
   width: 131px;
   padding: 12px;
   font-size: 17px;
-  background-color: #FF6B00;
+  background-color: #ff6b00;
   border: none;
   margin-top: 20px;
 }
