--- a/styles.css
+++ b/styles.css
@@ -391,7 +391,7 @@ h2 {
   text-align: center;
   color: #172b4d;
   width: 327px;
-  margin-bottom: 30px;
+  margin:30px 0px 30px 0px;
 }
 
 .footer-form {
@@ -424,6 +424,14 @@ h2 {
   background-color: #ff6b00;
   border: none;
   margin-top: 20px;
+  color: #fff;
+  cursor: pointer;
+  :hover{
+    background-color: #090809;
+  }
+  :active{
+    color:#ff6b00;
+  }
 }
 
 .media {
@@ -433,6 +441,8 @@ h2 {
 
 hr {
   margin-top: 78px;
+  color: #DFE1E6;
+  width: 100%;
 }
 
 .indicator {
