--- a/styles.css
+++ b/styles.css
@@ -392,4 +392,11 @@ color: #FFFFFF;
  line-height: 32px;
 }  
 
+.btn {
+  transition: border 1.5s, background-color 1.5s;
+}
 
+.btn:hover {
+  border: 1px solid #ff6b00;
+  background-color: #fff5e1;
+}
