--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ ul {
   font-size: 17px;
   font-weight: 700;
   line-height: 1.5;
+  cursor: pointer;
   transition: background-color 2s, color 2s, border 2s;
 }
 
