--- a/styles.css
+++ b/styles.css
@@ -196,7 +196,7 @@ ul {
 
 .nav-items {
   list-style: none;
-  diplay: flex;
+  display: flex;
   flex-direction: column;
   align-items: flex-start;
   padding: 0;
