--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@ ul {
 .header > a,
 .hero-text > h2 {
   font-family: "Roboto", sans-serif;
-  font-weight: 700;
+  font-weight: 701;
 }
 
 .header > a {
@@ -84,6 +84,7 @@ ul {
   font-size: 15px;
   margin: 0 1rem;
   align-items: center;
+  cursor: pointer;
 }
 
 .nav-list {
@@ -170,7 +171,7 @@ ul {
   width: 100%;
   height: 100%;
   display: none;
-  z-index: 100;
+  z-index: 101;
 }
 
 .PopupMenu.active {
