--- a/styles.css
+++ b/styles.css
@@ -107,16 +107,6 @@ ul {
   align-items: center;
 }
 
-.mobile-menu {
-  display: none;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100vh;
-  background-color: #3c3a39;
-  padding: 2.1rem 1.5rem;
-}
 
 .cancel-icon {
   float: right;
@@ -273,6 +263,17 @@ ul {
 }
 
 @media (min-width: 375px) {
+  .mobile-menu {
+    display: none;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: #3c3a39;
+    padding: 2.1rem 1.5rem;
+  }
+  
   .hero-section {
     background: #1c1a19 url(./assets/icons/Group.png) 100% 115% no-repeat;
     background-size: 8.5rem;
@@ -482,6 +483,12 @@ ul {
 }
 
 @media (min-width: 768px) {
+  .icon,
+  .mobile-menu{
+    display:none;
+  }
+
+
   .mp-head > h3 {
     margin: 3rem 0 3.2rem 0;
     width: calc(100% - 70%);
@@ -682,6 +689,12 @@ ul {
 }
 
 @media (min-width: 992px) {
+
+  .icon, 
+  .mobile-menu{
+    display:none;
+  }
+
   .header {
     padding: 1rem 8rem;
   }
